--- a/static/root.html
+++ b/static/root.html
@@ -1,8 +1,11 @@
 {{#if !broadcasterSockId && !chromeExtensionInstalled}}
 <div>
     - Install ScreenShare chrome extension from 
+    <!--
     <button primary on-click="installScreenCaptureExtension">here</button>
-    or <a href="https://chrome.google.com/webstore/detail/ajhifddimkapgcifgcodmmfdlknahffk" target="_blank">Here</a>
+    or 
+    -->
+    <a href="https://chrome.google.com/webstore/detail/ajhifddimkapgcifgcodmmfdlknahffk" target="_blank">Here</a>
 
 </div>
 {{/if}}
