--- a/static/root.html
+++ b/static/root.html
@@ -22,7 +22,7 @@
 <qrcode url="{{loc}}?id={{mysockid}}"></qrcode>
 {{/if}}
 <div id="vn">
-    <video play id="video"></video>
+    <video controls id="video"></video>
     {{#if !videoIsPlaying}}<noise id="noise"></noise>{{/if}}
 </div>
 <style>
