--- a/static/root.html
+++ b/static/root.html
@@ -5,7 +5,7 @@
 {{/if}}
 
 {{#if !broadcasterSockId}}
-<a href="{{loc}}?id={{mysockid}}" target="_blank">Share this link</a>
+<a href="{{loc}}?id={{mysockid}}" target="_blank">{{loc}}?id={{mysockid}}</a>
 <qrcode url="{{loc}}?id={{mysockid}}"></qrcode>
 {{/if}}
 <div id="vn">
