--- a/static/root.html
+++ b/static/root.html
@@ -1,15 +1,15 @@
-
+{{#if !broadcasterSockId && !videoIsPlaying}}
 <div>
     <button disabled={{ broadcasterSockId || videoIsPlaying}} primary on-click="startBroadcast">Share my screen</button>
 </div>
-
-{{#if !broadcasterSockId && videoIsPlaying}}
-<p>
-<a href="{{loc}}?id={{mysockid}}" target="_blank">{{loc}}?id={{mysockid}}</a>
-</p>
-<qrcode url="{{loc}}?id={{mysockid}}"></qrcode>
 {{/if}}
 
+{{#if !broadcasterSockId && videoIsPlaying}}
+<p>Your screen is now visible at  
+<a href="{{loc}}?id={{mysockid}}" target="_blank">{{loc}}?id={{mysockid}}</a>
+</p>
+<!-- <qrcode url="{{loc}}?id={{mysockid}}"></qrcode> -->
+{{/if}}
 <div id="vn">
     <video controls id="video"></video>
     {{#if !videoIsPlaying}}<noise id="noise"></noise>{{/if}}
