--- a/static/root.html
+++ b/static/root.html
@@ -11,7 +11,7 @@
 <!-- <qrcode url="{{loc}}?id={{mysockid}}"></qrcode> -->
 {{/if}}
 <div id="vn">
-    <video controls id="video"></video>
+    <video style="width: {{broadcasterSockId?'100%':'39em'}};" controls id="video"></video>
     {{#if !videoIsPlaying}}<noise id="noise"></noise>{{/if}}
 </div>
 <style>
