link share disable w8

--- a/static/noise.html
+++ b/static/noise.html
@@ -1,4 +1,4 @@
-<canvas style={{style}} id="canvas"></canvas>
+<canvas style="width:{{w}} !important" id="canvas"></canvas>
 
 <style>
     #canvas {
