link share disable w9

--- a/static/noise.html
+++ b/static/noise.html
@@ -5,8 +5,9 @@
         width: 100%;
         position:absolute;
         top:0;
-        right:0;
-        left:0;
+        
+        left:50%;
+        transform: translateX(-50%);
         bottom: 0;
         opacity:0.4;
     }
