--- a/static/index.html
+++ b/static/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" style="height: 100%;" >
 <head>
-    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+  <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
 	<title>Screenshare webrtc</title>
 	
 	<!-- favicon -->
@@ -22,6 +22,7 @@
             flex-flow: column; 
             text-align: center;
             align-items: center;
+            padding-top: 0 !important;
         }     
     </style>
     
