link share disable wb

--- a/static/root.html
+++ b/static/root.html
@@ -6,7 +6,7 @@
 {{/if}}
 
 {{#if !broadcasterSockId}}
-<p style="visibility:{{videoIsPlaying?'hidden':'visible'}}">Your screen is now visible at:  
+<p style="visibility:{{videoIsPlaying?'visible':'hidden'}}">Your screen is now visible at:  
 <a href="{{loc}}?id={{mysockid}}" target="_blank">{{loc}}?id={{mysockid}}</a>
 </p>
 <!-- <qrcode url="{{loc}}?id={{mysockid}}"></qrcode> -->
