link share disable wc

--- a/static/root.html
+++ b/static/root.html
@@ -2,6 +2,8 @@
 <br>
 <div>
     <button disabled={{ broadcasterSockId || videoIsPlaying}} primary on-click="startBroadcast">Share my screen</button>
+    <input disabled={{ broadcasterSockId || videoIsPlaying}} type="checkbox" id="checkbox-2" checked="{{audio}}"> 
+    <label for="checkbox-2">Multiple rows</label>    
 </div>
 {{/if}}
 
@@ -45,6 +47,18 @@
                         //navigator.getUserMedia = navigator.mozGetUserMedia || navigator.webkitGetUserMedia;
                         let stream = null;
                         let displayMediaOptions = {};
+                        if (self.get('audio'))
+                          displayMediaOptions = {
+                            video: {
+                              cursor: "always"
+                            },
+                            audio: {
+                              echoCancellation: true,
+                              noiseSuppression: true,
+                              sampleRate: 44100
+                            }
+                          }
+
                         try {    
                           navigator.mediaDevices.getDisplayMedia(displayMediaOptions).then(function(stream){
                             self.stream=stream;
@@ -70,6 +84,7 @@
                     , loc: document.location.href
                     , broadcasterSockId:null
                     , videoIsPlaying:false
+                    , audio:false
                     //, chromeExtensionInstalled:false
                 }
             }
