--- a/static/root.html
+++ b/static/root.html
@@ -13,7 +13,7 @@
 <p style="visibility:{{videoIsPlaying?'visible':'hidden'}}">Your screen is now visible at<br>  
 <a href="{{loc}}?id={{mysockid}}" target="_blank">{{loc}}?id={{mysockid}}</a>
 &nbsp;
-<svg style="width:1em" title="Copy to clipboard" on-click="cp2kb" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+<svg style="width:1em; cursor: pointer;" title="Copy to clipboard" on-click="cp2kb" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 460 460" style="enable-background:new 0 0 460 460;" xml:space="preserve">
 <g>
 	<g>
