--- a/static/index.html
+++ b/static/index.html
@@ -28,6 +28,8 @@
           animation-fill-mode: forward;
           animation: puf-anim 0.9s both; 
           font-weight: bold;
+          left: 0;
+          bottom: 0;
         }
 
         @keyframes puf-anim {
