--- a/static/index.html
+++ b/static/index.html
@@ -27,9 +27,10 @@
         .puf {
           animation-fill-mode: forward;
           animation: puf-anim 0.9s both; 
-          font-weight: bold;
+          position:absolute;
           left: 0;
           bottom: 0;
+          white-space: nowrap;
         }
 
         @keyframes puf-anim {
