--- a/static/root.html
+++ b/static/root.html
@@ -34,7 +34,7 @@
   </g>
   </svg>
   {{#if puf}}
-  <div class="puf" style="position:absolute">
+  <div class="puf">
     <center>Copied to Clipboard</center>
   </div>
   {{/if}}
