--- a/static/index.html
+++ b/static/index.html
@@ -26,10 +26,11 @@
         }     
         .puf {
           animation-fill-mode: forward;
-          animation: puf-anim 0.9s both; 
+          animation: puf-anim 0.5s both; 
           position:absolute;
           left: 0;
           bottom: 0;
+          pointer-events: none;
           white-space: nowrap;
         }
 
