--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,9 @@
 <head>
   <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
-	<title>Screenshare webrtc</title>
+  <title>Screenshare webrtc</title>
+  <meta name="description" content="Easy way to share your screen in Chrome without extensions/plugins"/>
+  <meta name="keywords" content="Screenshare p2p chrome webrtc">
 	
 	<!-- favicon -->
 	<link rel="shortcut icon" href="favicon.ico" />
@@ -28,7 +30,7 @@
           animation-fill-mode: forward;
           animation: puf-anim 0.5s both; 
           position:absolute;
-          left: 0;
+          left: 1em;
           bottom: 0;
           pointer-events: none;
           white-space: nowrap;
