--- a/static/index.html
+++ b/static/index.html
@@ -67,6 +67,7 @@
 <body>
     <script src="/socket.io/socket.io.js"></script>
     <script src="js/bundle.js?refresh=5"></script>
+    <div class="sharethis-inline-share-buttons"></div>
 </body>    
 </html>
 
