--- a/static/root.html
+++ b/static/root.html
@@ -49,13 +49,15 @@
     {{#if !videoIsPlaying}}<noise w="{{broadcasterSockId?'100%':'39em'}}" id="noise"></noise>{{/if}}
 </div>
 <style>
-    #video {
-        width: 100%;
-    }
-    #vn{
-        width: 100%;
-        position:relative;
-    }
+  #video {
+    max-width: 100%;
+    max-height: 100%;
+  }
+  #vn{
+    width: 100%;
+    height: 100%;
+    position:relative;
+  }
 </style>
 
     
