--- a/static/root.html
+++ b/static/root.html
@@ -45,8 +45,8 @@
 <!-- <qrcode url="{{loc}}?id={{mysockid}}"></qrcode> -->
 {{/if}}
 <div id="vn">
-    <video style="width: {{broadcasterSockId?'100%':'39em'}};" controls id="video"></video>
-    {{#if !videoIsPlaying}}<noise w="{{broadcasterSockId?'100%':'39em'}}" id="noise"></noise>{{/if}}
+    <video style="width: {{broadcasterSockId?'auto':'39em'}};" controls id="video"></video>
+    {{#if !videoIsPlaying}}<noise w="{{broadcasterSockId?'auto':'39em'}}" id="noise"></noise>{{/if}}
 </div>
 <style>
   #video {
